"Timestamp" and "Audit" alignment is not correct on "Signing" page and "Signed" page with "Portrait/Landscape" mode on "Android" device

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -633,8 +633,8 @@ text-align: left;
 }
 
 table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
-    /*padding-left: 0% !important;*/
-    /*  padding-right: 30% !important; */
+   
+    padding-right: 13% !important; 
 }
 
 #mobile-adopt-sign {
@@ -784,6 +784,7 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
 @media only screen and (max-width: 780px){
 table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
     padding-left: 3% !important;
+    padding-right: 13% !important;
 }
 table.responsive-table td span, table.responsive-table td span {
     position: relative !important;
